--- a/index.html
+++ b/index.html
@@ -1,236 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Document-Backed Lending DApp</title>
-  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Document-Backed Lending DApp</title>
+<script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
-  <style>
-    body {
-      background: linear-gradient(to right, #e0f7fa, #ede7f6);
-      font-family: 'Segoe UI', sans-serif;
-    }
-    .container {
-      background: rgba(255, 255, 255, 0.85);
-      border-radius: 20px;
-      padding: 30px;
-      margin-top: 20px;
-    }
-    .title {
-      font-size: 2.5rem;
-      font-weight: bold;
-      text-align: center;
-      background: linear-gradient(to right, #8e44ad, #3498db);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-    .btn {
-      border-radius: 12px;
-      font-weight: 600;
-      transition: 0.3s;
-    }
-    .btn-success { background: linear-gradient(to right, #10b981, #34d399); color: white; border: none; }
-    .btn-warning { background: linear-gradient(to right, #f59e0b, #fbbf24); color: white; border: none; }
-    .btn-primary { background: linear-gradient(to right, #3b82f6, #60a5fa); color: white; border: none; }
-    .btn-purple  { background: linear-gradient(to right, #8b5cf6, #a78bfa); color: white; border: none; }
-    .btn-reset   { background: linear-gradient(to right, #14b8a6, #2dd4bf); color: white; border: none; }
-    #repayStatus { font-weight: bold; }
-    #toastBox {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      z-index: 9999;
-    }
-    .toast {
-      background-color: #0d6efd;
-      color: white;
-      padding: 12px 20px;
-      border-radius: 10px;
-      margin-top: 10px;
-      animation: slideIn 0.5s ease-out;
-    }
-    @keyframes slideIn {
-      from { opacity: 0; transform: translateX(100px); }
-      to { opacity: 1; transform: translateX(0); }
-    }
-  </style>
+<style>
+body { background: linear-gradient(to right, #e0f7fa, #ede7f6); font-family: 'Segoe UI', sans-serif; transition: all 0.4s;}
+.dark-mode { background: linear-gradient(to right, #121212, #1f1f1f); color: #f9fafb; }
+.container { background: rgba(255,255,255,0.85); border-radius: 20px; padding: 2rem; }
+body.dark-mode .container { background: rgba(33,33,33,0.85); }
+.title { font-size:2.5rem; font-weight:bold; text-align:center; background: linear-gradient(to right,#8e44ad,#3498db); -webkit-background-clip:text; -webkit-text-fill-color:transparent; }
+.card { border-radius: 20px; backdrop-filter: blur(8px); box-shadow:0 10px 30px rgba(0,0,0,0.1); padding:1rem; margin-bottom:1rem; }
+.form-control { border-radius:12px; }
+.btn { border-radius:12px; font-weight:600; transition:0.3s; }
+.btn-success { background: linear-gradient(to right, #10b981, #34d399); color:white; border:none; }
+.btn-warning { background: linear-gradient(to right, #f59e0b, #fbbf24); color:white; border:none; }
+.btn-primary { background: linear-gradient(to right, #3b82f6, #60a5fa); color:white; border:none; }
+.btn-purple  { background: linear-gradient(to right, #8b5cf6, #a78bfa); color:white; border:none; }
+.btn-reset   { background: linear-gradient(to right, #14b8a6, #2dd4bf); color:white; border:none; }
+#repayStatus { font-weight:bold; margin-top:1rem; }
+.dark-toggle { position:fixed; top:1rem; right:1rem; z-index:999; }
+#toastBox { position: fixed; bottom:20px; right:20px; z-index:9999; }
+.toast { background-color:#0d6efd; color:white; padding:12px 20px; border-radius:10px; margin-top:10px; animation: slideIn 0.5s ease-out; }
+@keyframes slideIn { from { opacity:0; transform:translateX(100px);} to { opacity:1; transform:translateX(0);} }
+</style>
 </head>
 <body>
-  <div class="container">
-    <h2 class="title mb-4">📜 Document-Backed Lending DApp</h2>
+<button class="btn btn-dark dark-toggle" onclick="toggleDarkMode()">🌓 Toggle Dark Mode</button>
 
-    <lottie-player
-      src="https://assets5.lottiefiles.com/packages/lf20_ydo1amjm.json"
-      background="transparent"
-      speed="1"
-      style="width: 100px; height: 100px; margin: 0 auto;"
-      loop
-      autoplay>
-    </lottie-player>
+<div class="container">
+<h2 class="title mb-4">📜 Document-Backed Lending DApp</h2>
 
-    <div class="text-end mb-3">
-      <button onclick="resetLoanManually()" class="btn btn-reset btn-sm">🔁 Reset Loan (Lender Only)</button>
-    </div>
+<lottie-player src="https://assets5.lottiefiles.com/packages/lf20_ydo1amjm.json" background="transparent" speed="1" style="width:100px; height:100px; margin:0 auto;" loop autoplay></lottie-player>
 
-    <div class="card mb-4 p-4">
-      <h5>🔌 Wallet Connection</h5>
-      <button class="btn btn-primary mb-2" onclick="connectWallet()">Connect Wallet</button>
-      <p id="walletAddress" class="text-success"></p>
-    </div>
+<div class="text-end mb-3">
+<button onclick="resetLoanManually()" class="btn btn-reset btn-sm">🔁 Reset Loan (Lender Only)</button>
+</div>
 
-    <div class="row">
-      <div class="col-md-6 mb-4">
-        <div class="card p-4">
-          <h5>💰 Lender Panel</h5>
-          <input id="interestRate" class="form-control mb-2" placeholder="Interest Rate (%)">
-          <input id="loanAmount" class="form-control mb-2" placeholder="Loan Amount (ETH)">
-          <input type="file" id="lenderDoc" class="form-control mb-3">
-          <button class="btn btn-success w-100" onclick="offerLoan()">Offer Loan</button>
-        </div>
-      </div>
+<div class="card">
+<h5>🔌 Wallet Connection</h5>
+<button class="btn btn-primary mb-2" onclick="connectWallet()">Connect Wallet</button>
+<p id="walletAddress" class="text-success"></p>
+</div>
 
-      <div class="col-md-6 mb-4">
-        <div class="card p-4">
-          <h5>📄 Borrower Panel</h5>
-          <input type="file" id="borrowerDoc" class="form-control mb-3">
-          <button class="btn btn-warning w-100 mb-2" onclick="submitDocument()">Submit Document</button>
-          <button class="btn btn-primary w-100 mb-2" onclick="takeLoan()">Take Loan</button>
-          <button class="btn btn-purple w-100 mb-2" onclick="repayLoan()">Repay Loan</button>
-          <p id="repayStatus" class="mt-3 text-danger"></p>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="row">
+<div class="col-md-6">
+<div class="card">
+<h5>💰 Lender Panel</h5>
+<input id="interestRate" class="form-control mb-2" placeholder="Interest Rate (%)">
+<input id="loanAmount" class="form-control mb-2" placeholder="Loan Amount (ETH)">
+<input type="file" id="lenderDoc" class="form-control mb-3">
+<button class="btn btn-success w-100" onclick="offerLoan()">Offer Loan</button>
+</div>
+</div>
 
-  <div id="toastBox"></div>
+<div class="col-md-6">
+<div class="card">
+<h5>📄 Borrower Panel</h5>
+<input type="file" id="borrowerDoc" class="form-control mb-3">
+<button class="btn btn-warning w-100 mb-2" onclick="submitDocument()">Submit Document</button>
+<button class="btn btn-primary w-100 mb-2" onclick="takeLoan()">Take Loan</button>
+<button class="btn btn-purple w-100 mb-2" onclick="repayLoan()">Repay Loan</button>
+<p id="repayStatus" class="text-danger"></p>
+</div>
+</div>
+</div>
+</div>
 
-  <script>
-    function showToast(message, type = "info") {
-      const toast = document.createElement("div");
-      toast.className = "toast";
-      toast.innerText = message;
-      if (type === "error") toast.style.backgroundColor = "#dc3545";
-      if (type === "success") toast.style.backgroundColor = "#28a745";
-      document.getElementById("toastBox").appendChild(toast);
-      setTimeout(() => toast.remove(), 3000);
-    }
+<div id="toastBox"></div>
 
-    let web3;
-    let account;
-    const contractAddress = "0x1c91347f2A44538ce62453BEBd9Aa907C662b4bD";
-    const contractABI = [ /* paste your ABI JSON here */ ];
-    let contract;
+<script>
+let web3, account, contract;
+const contractAddress = "0x1c91347f2A44538ce62453BEBd9Aa907C662b4bD";
+const contractABI = [ /* paste your ABI JSON here */ ];
 
-    async function connectWallet() {
-      if (window.ethereum) {
-        web3 = new Web3(window.ethereum);
-        await window.ethereum.request({ method: 'eth_requestAccounts' });
-        const accounts = await web3.eth.getAccounts();
-        account = accounts[0];
-        document.getElementById("walletAddress").innerText = `Connected: ${account}`;
-        contract = new web3.eth.Contract(contractABI, contractAddress);
-        showToast("Wallet connected!", "success");
-      } else {
-        showToast("Please install MetaMask", "error");
-      }
-    }
+function toggleDarkMode() { document.body.classList.toggle("dark-mode"); }
+function showToast(msg,type="info"){const t=document.createElement("div");t.className="toast";t.innerText=msg;if(type==="error")t.style.backgroundColor="#dc3545";if(type==="success")t.style.backgroundColor="#28a745";document.getElementById("toastBox").appendChild(t);setTimeout(()=>t.remove(),3000);}
 
-    async function getFileHash(file) {
-      return new Promise((resolve, reject) => {
-        const reader = new FileReader();
-        reader.onload = async () => {
-          try {
-            const buffer = reader.result;
-            const hashBuffer = await crypto.subtle.digest('SHA-256', buffer);
-            const hashArray = Array.from(new Uint8Array(hashBuffer));
-            const hashHex = "0x" + hashArray.map(b => b.toString(16).padStart(2, '0')).join('');
-            resolve(hashHex);
-          } catch (err) { reject(err); }
-        };
-        reader.onerror = reject;
-        reader.readAsArrayBuffer(file);
-      });
-    }
+async function connectWallet(){
+  if(!window.ethereum){showToast("Install MetaMask","error"); return;}
+  web3=new Web3(window.ethereum);
+  try{
+    const accounts=await window.ethereum.request({method:'eth_requestAccounts'});
+    account=accounts[0];
+    document.getElementById("walletAddress").innerText=`Connected: ${account}`;
+    contract=new web3.eth.Contract(contractABI, contractAddress);
+    showToast("Wallet connected","success");
+  }catch(e){showToast("Connection failed","error"); console.error(e);}
+}
 
-    async function offerLoan() {
-      const rate = document.getElementById("interestRate").value;
-      const amount = document.getElementById("loanAmount").value;
-      const file = document.getElementById("lenderDoc").files[0];
-      if (!file) return showToast("Please upload a document", "error");
-      const hash = await getFileHash(file);
-      try {
-        await contract.methods.offerLoan(rate, hash).send({ from: account, value: web3.utils.toWei(amount, 'ether') });
-        showToast("Loan offered successfully.", "success");
-      } catch (err) {
-        console.error(err);
-        showToast("Failed to offer loan.", "error");
-      }
-    }
+async function getFileHash(file){
+  return new Promise((resolve,reject)=>{
+    const reader=new FileReader();
+    reader.onload=async()=>{try{
+      const buffer=reader.result;
+      const hashBuffer=await crypto.subtle.digest('SHA-256',buffer);
+      const hashArray=Array.from(new Uint8Array(hashBuffer));
+      const hashHex="0x"+hashArray.map(b=>b.toString(16).padStart(2,'0')).join('');
+      resolve(hashHex);
+    }catch(err){reject(err);}};
+    reader.onerror=reject;
+    reader.readAsArrayBuffer(file);
+  });
+}
 
-    async function submitDocument() {
-      const file = document.getElementById("borrowerDoc").files[0];
-      if (!file) return showToast("Upload the document", "error");
-      const hash = await getFileHash(file);
-      try {
-        await contract.methods.submitDocument(hash).send({ from: account });
-        showToast("Document submitted", "success");
-      } catch (err) {
-        console.error(err);
-        showToast("Submission failed", "error");
-      }
-    }
+async function offerLoan(){
+  if(!account){showToast("Connect wallet first","error"); return;}
+  const rate=document.getElementById("interestRate").value;
+  const amount=document.getElementById("loanAmount").value;
+  const file=document.getElementById("lenderDoc").files[0];
+  if(!file){showToast("Upload document","error"); return;}
+  const hash=await getFileHash(file);
+  try{
+    await contract.methods.offerLoan(rate,hash).send({from:account,value:web3.utils.toWei(amount,'ether')});
+    showToast("Loan offered","success");
+  }catch(err){console.error(err); showToast("Failed to offer loan","error");}
+}
 
-    async function takeLoan() {
-      try {
-        await contract.methods.takeLoan().send({ from: account });
-        showToast("Loan taken successfully", "success");
-      } catch (err) {
-        console.error(err);
-        showToast("Take loan failed", "error");
-      }
-    }
+async function submitDocument(){
+  if(!account){showToast("Connect wallet first","error"); return;}
+  const file=document.getElementById("borrowerDoc").files[0];
+  if(!file){showToast("Upload document","error"); return;}
+  const hash=await getFileHash(file);
+  try{await contract.methods.submitDocument(hash).send({from:account}); showToast("Document submitted","success");}
+  catch(err){console.error(err); showToast("Failed to submit","error");}
+}
 
-    async function repayLoan() {
-      try {
-        const loanAmount = await contract.methods.loanAmount().call();
-        const interestRate = await contract.methods.interestRate().call();
-        const loanStartTime = await contract.methods.loanStartTime().call();
-        const lenderAddress = await contract.methods.lender().call();
+async function takeLoan(){
+  if(!account){showToast("Connect wallet first","error"); return;}
+  try{await contract.methods.takeLoan().send({from:account}); showToast("Loan taken","success");}
+  catch(err){console.error(err); showToast("Failed to take loan","error");}
+}
 
-        const now = Math.floor(Date.now()/1000);
-        const monthsElapsed = Math.floor((now - loanStartTime)/(30*24*60*60));
-        const interest = BigInt(loanAmount) * BigInt(interestRate) * BigInt(monthsElapsed + 1)/100n;
-        const totalDue = BigInt(loanAmount) + interest;
+async function repayLoan(){
+  if(!account){showToast("Connect wallet first","error"); return;}
+  try{
+    const [loanAmount,interestRate,loanStartTime,lenderAddress]=await Promise.all([
+      contract.methods.loanAmount().call(),
+      contract.methods.interestRate().call(),
+      contract.methods.loanStartTime().call(),
+      contract.methods.lender().call()
+    ]);
+    const now=Math.floor(Date.now()/1000);
+    const elapsed=now-Number(loanStartTime);
+    const months=Math.floor(elapsed/(30*24*60*60));
+    const interest=(BigInt(loanAmount)*BigInt(interestRate)*BigInt(months+1))/100n;
+    const totalDue=BigInt(loanAmount)+interest;
+    await contract.methods.repayLoan().send({from:account,value:totalDue.toString()});
+    document.getElementById("repayStatus").innerText="✅ Repayment successful";
+    document.getElementById("repayStatus").classList.replace("text-danger","text-success");
+  }catch(err){console.error(err); showToast("Repayment failed","error"); document.getElementById("repayStatus").innerText="❌ Failed to repay";}
+}
 
-        await contract.methods.repayLoan().send({ from: account, value: totalDue.toString() });
-        document.getElementById("repayStatus").innerText = "✅ Repayment done.";
-        document.getElementById("repayStatus").classList.remove("text-danger");
-        document.getElementById("repayStatus").classList.add("text-success");
-
-        if (account.toLowerCase() === lenderAddress.toLowerCase()) {
-          await contract.methods.resetLoan().send({ from: account });
-          document.getElementById("repayStatus").innerText = "✅ Loan repaid and reset.";
-        }
-      } catch (err) {
-        console.error(err);
-        document.getElementById("repayStatus").innerText = "❌ Repay failed.";
-      }
-    }
-
-    async function resetLoanManually() {
-      try {
-        await contract.methods.resetLoan().send({ from: account });
-        document.getElementById("repayStatus").innerText = "Loan reset manually by lender.";
-        document.getElementById("repayStatus").classList.remove("text-danger");
-        document.getElementById("repayStatus").classList.add("text-success");
-      } catch (err) {
-        console.error(err);
-        document.getElementById("repayStatus").innerText = "Manual reset failed.";
-      }
-    }
-  </script>
+async function resetLoanManually(){
+  if(!account){showToast("Connect wallet first","error"); return;}
+  try{await contract.methods.resetLoan().send({from:account}); showToast("Loan reset manually","success");}
+  catch(err){console.error(err); showToast("Reset failed","error");}
+}
+</script>
 </body>
 </html>
