--- a/index.html
+++ b/index.html
@@ -1,143 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Document-Backed Lending DApp</title>
-
-<!-- Web3 -->
 <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-<!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-<!-- Lottie -->
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
 <style>
-body {background: linear-gradient(to right, #fef9c3, #fbcfe8); font-family:'Segoe UI', sans-serif; transition: all 0.4s;}
-body.dark-mode {background: linear-gradient(to right,#121212,#1f1f1f); color:#f9fafb;}
-.container {background: rgba(255,255,255,0.9); border-radius: 20px; padding: 2rem; margin-top: 2rem; box-shadow:0 8px 25px rgba(0,0,0,0.1);}
-body.dark-mode .container {background: rgba(33,33,33,0.9);}
-.title {font-size: 2.5rem; font-weight: bold; text-align:center; background: linear-gradient(to right,#8e44ad,#3498db); -webkit-background-clip:text; -webkit-text-fill-color:transparent;}
-.card {border-radius:20px; backdrop-filter: blur(6px); padding:1rem; margin-bottom:1.5rem; box-shadow:0 10px 30px rgba(0,0,0,0.1); transition:0.3s;}
-.card:hover {transform: translateY(-5px); box-shadow:0 12px 30px rgba(0,0,0,0.2);}
-.form-control {border-radius:12px;}
-.btn {border-radius:12px; font-weight:600; transition:0.3s;}
-.btn-success {background:linear-gradient(to right,#10b981,#34d399); color:white; border:none;}
-.btn-warning {background:linear-gradient(to right,#f59e0b,#fbbf24); color:white; border:none;}
-.btn-primary {background:linear-gradient(to right,#3b82f6,#60a5fa); color:white; border:none;}
-.btn-purple {background:linear-gradient(to right,#8b5cf6,#a78bfa); color:white; border:none;}
-.btn-reset {background:linear-gradient(to right,#14b8a6,#2dd4bf); color:white; border:none;}
-.dark-toggle {position: fixed; top:1rem; right:1rem; z-index:999;}
-#toastBox {position: fixed; bottom: 20px; right: 20px; z-index:9999;}
-.toast {background-color:#0d6efd;color:white;padding:12px 20px;border-radius:10px;margin-top:10px; animation:slideIn 0.5s ease-out;}
-@keyframes slideIn {from {opacity:0; transform: translateX(100px);} to {opacity:1; transform:translateX(0);}}
+body {
+  background: linear-gradient(to right, #fef9c3, #fbcfe8);
+  font-family: 'Segoe UI', sans-serif;
+  transition: all 0.4s;
+}
+body.dark-mode {
+  background: linear-gradient(to right, #121212, #1f1f1f);
+  color: #f9fafb;
+}
+.container {
+  background: rgba(255, 255, 255, 0.9);
+  border-radius: 20px;
+  padding: 2rem;
+  margin-top: 2rem;
+  box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+}
+body.dark-mode .container { background: rgba(33,33,33,0.9); }
+
+.title {
+  font-size: 2.5rem;
+  font-weight: bold;
+  text-align: center;
+  background: linear-gradient(to right, #8e44ad, #3498db);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.card {
+  border-radius: 20px;
+  backdrop-filter: blur(6px);
+  padding: 1rem;
+  margin-bottom: 1.5rem;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+  transition: 0.3s;
+}
+.card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 12px 30px rgba(0,0,0,0.2);
+}
+
+.form-control { border-radius: 12px; }
+.btn {
+  border-radius: 12px;
+  font-weight: 600;
+  transition: 0.3s;
+}
+.btn-success { background: linear-gradient(to right, #10b981, #34d399); color: white; border: none; }
+.btn-warning { background: linear-gradient(to right, #f59e0b, #fbbf24); color: white; border: none; }
+.btn-primary { background: linear-gradient(to right, #3b82f6, #60a5fa); color: white; border: none; }
+.btn-purple  { background: linear-gradient(to right, #8b5cf6, #a78bfa); color: white; border: none; }
+.btn-reset   { background: linear-gradient(to right, #14b8a6, #2dd4bf); color: white; border: none; }
+
+.dark-toggle { position: fixed; top: 1rem; right: 1rem; z-index: 999; }
+
+#toastBox { position: fixed; bottom: 20px; right: 20px; z-index: 9999; }
+.toast { background-color: #0d6efd; color: white; padding: 12px 20px; border-radius: 10px; margin-top: 10px; animation: slideIn 0.5s ease-out; }
+@keyframes slideIn { from { opacity:0; transform:translateX(100px);} to {opacity:1; transform:translateX(0);} }
+
 </style>
 </head>
-
 <body>
-
 <button class="btn btn-dark dark-toggle" onclick="toggleDarkMode()">🌓 Dark Mode</button>
 
 <div class="container">
-  <h2 class="title mb-4">📜 Document-Backed Lending DApp</h2>
+<h2 class="title mb-4">📜 Document-Backed Lending DApp</h2>
 
-  <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_ydo1amjm.json" background="transparent" speed="1" style="width:100px;height:100px;margin:0 auto;" loop autoplay></lottie-player>
+<lottie-player src="https://assets5.lottiefiles.com/packages/lf20_ydo1amjm.json" background="transparent" speed="1" style="width:100px;height:100px;margin:0 auto;" loop autoplay></lottie-player>
 
-  <div class="text-end mb-3">
-    <button onclick="resetLoanManually()" class="btn btn-reset btn-sm">🔁 Reset Loan (Lender Only)</button>
-  </div>
+<div class="text-end mb-3">
+  <button onclick="resetLoanManually()" class="btn btn-reset btn-sm">🔁 Reset Loan (Lender Only)</button>
+</div>
 
-  <div class="card">
-    <h5>🔌 Wallet Connection</h5>
-    <button class="btn btn-primary mb-2" onclick="connectWallet()">Connect Wallet</button>
-    <p id="walletAddress" class="text-success"></p>
-  </div>
+<div class="card">
+  <h5>🔌 Wallet Connection</h5>
+  <button class="btn btn-primary mb-2" id="connectBtn">Connect Wallet</button>
+  <p id="walletAddress" class="text-success"></p>
+</div>
 
-  <div class="row">
-    <div class="col-md-6">
-      <div class="card lender-panel">
-        <h5>💰 Lender Panel</h5>
-        <input id="interestRate" class="form-control mb-2" placeholder="Interest Rate (%)">
-        <input id="loanAmount" class="form-control mb-2" placeholder="Loan Amount (ETH)">
-        <input type="file" id="lenderDoc" class="form-control mb-3" accept="*/*">
-        <button class="btn btn-success w-100" onclick="offerLoan()">Offer Loan</button>
-      </div>
-    </div>
-
-    <div class="col-md-6">
-      <div class="card borrower-panel">
-        <h5>📄 Borrower Panel</h5>
-        <input type="file" id="borrowerDoc" class="form-control mb-3" accept="*/*">
-        <button class="btn btn-warning w-100 mb-2" onclick="submitDocument()">Submit Document</button>
-        <button class="btn btn-primary w-100 mb-2" onclick="takeLoan()">Take Loan</button>
-        <button class="btn btn-purple w-100 mb-2" onclick="repayLoan()">Repay Loan</button>
-        <p id="repayStatus" class="mt-3 text-danger"></p>
-      </div>
+<div class="row">
+  <div class="col-md-6">
+    <div class="card lender-panel">
+      <h5>💰 Lender Panel</h5>
+      <input id="interestRate" class="form-control mb-2" placeholder="Interest Rate (%)">
+      <input id="loanAmount" class="form-control mb-2" placeholder="Loan Amount (ETH)">
+      <input type="file" id="lenderDoc" class="form-control mb-3" accept="*/*">
+      <button class="btn btn-success w-100" onclick="offerLoan()">Offer Loan</button>
     </div>
   </div>
+  <div class="col-md-6">
+    <div class="card borrower-panel">
+      <h5>📄 Borrower Panel</h5>
+      <input type="file" id="borrowerDoc" class="form-control mb-3" accept="*/*">
+      <button class="btn btn-warning w-100 mb-2" onclick="submitDocument()">Submit Document</button>
+      <button class="btn btn-primary w-100 mb-2" onclick="takeLoan()">Take Loan</button>
+      <button class="btn btn-purple w-100 mb-2" onclick="repayLoan()">Repay Loan</button>
+      <p id="repayStatus" class="mt-3 text-danger"></p>
+    </div>
+  </div>
+</div>
 </div>
 
 <div id="toastBox"></div>
 
 <script>
-/* ===== Dark Mode ===== */
 function toggleDarkMode(){ document.body.classList.toggle("dark-mode"); }
 
-/* ===== Toast Notification ===== */
-function showToast(message,type="info"){
+function showToast(msg,type="info"){
   const toast=document.createElement("div");
-  toast.className="toast";
-  toast.innerText=message;
+  toast.className="toast"; toast.innerText=msg;
   if(type==="error") toast.style.backgroundColor="#dc3545";
   if(type==="success") toast.style.backgroundColor="#28a745";
   document.getElementById("toastBox").appendChild(toast);
   setTimeout(()=>toast.remove(),3000);
 }
 
-/* ===== Web3 & Contract ===== */
 let web3, account, contract;
-const contractAddress="0x1c91347f2A44538ce62453BEBd9Aa907C662b4bD";
-const contractABI=[
-	{"inputs":[],"stateMutability":"nonpayable","type":"constructor"},
-	{"inputs":[],"name":"borrower","outputs":[{"internalType":"address payable","name":"","type":"address"}],"stateMutability":"view","type":"function"},
-	{"inputs":[],"name":"docSubmitted","outputs":[{"internalType":"bool","name":"","type":"bool"}],"stateMutability":"view","type":"function"},
-	{"inputs":[],"name":"documentHash","outputs":[{"internalType":"bytes32","name":"","type":"bytes32"}],"stateMutability":"view","type":"function"},
-	{"inputs":[],"name":"interestRate","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},
-	{"inputs":[],"name":"lender","outputs":[{"internalType":"address payable","name":"","type":"address"}],"stateMutability":"view","type":"function"},
-	{"inputs":[],"name":"loanAmount","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},
-	{"inputs":[],"name":"loanOffered","outputs":[{"internalType":"bool","name":"","type":"bool"}],"stateMutability":"view","type":"function"},
-	{"inputs":[],"name":"loanRepaid","outputs":[{"internalType":"bool","name":"","type":"bool"}],"stateMutability":"view","type":"function"},
-	{"inputs":[],"name":"loanStartTime","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},
-	{"inputs":[],"name":"loanTaken","outputs":[{"internalType":"bool","name":"","type":"bool"}],"stateMutability":"view","type":"function"},
-	{"inputs":[{"internalType":"uint256","name":"_interestRate","type":"uint256"},{"internalType":"bytes32","name":"_docHash","type":"bytes32"}],"name":"offerLoan","outputs":[],"stateMutability":"payable","type":"function"},
-	{"inputs":[],"name":"repayLoan","outputs":[],"stateMutability":"payable","type":"function"},
-	{"inputs":[],"name":"resetLoan","outputs":[],"stateMutability":"nonpayable","type":"function"},
-	{"inputs":[{"internalType":"bytes32","name":"_userDocHash","type":"bytes32"}],"name":"submitDocument","outputs":[],"stateMutability":"nonpayable","type":"function"},
-	{"inputs":[],"name":"takeLoan","outputs":[],"stateMutability":"nonpayable","type":"function"}
-];
+const contractAddress = "0x1c91347f2A44538ce62453BEBd9Aa907C662b4bD";
+const contractABI = [ /* PASTE YOUR FULL ABI HERE */ ];
 
-/* ===== Connect Wallet ===== */
+const connectBtn = document.getElementById("connectBtn");
+
 async function connectWallet(){
-  if(!window.ethereum) return showToast("Install MetaMask!","error");
+  if(!window.ethereum) return showToast("Install MetaMask!", "error");
   try{
-    await window.ethereum.request({method:"eth_requestAccounts"});
-    web3=new Web3(window.ethereum);
-    const accounts=await web3.eth.getAccounts();
+    await window.ethereum.request({ method:"eth_requestAccounts"});
+    web3 = new Web3(window.ethereum);
+    const accounts = await web3.eth.getAccounts();
     if(accounts.length===0) throw "No accounts found!";
-    account=accounts[0];
+    account = accounts[0];
     document.getElementById("walletAddress").innerText=`Connected: ${account}`;
-    contract=new web3.eth.Contract(contractABI, contractAddress);
-    showToast("Wallet connected!","success");
+    contract = new web3.eth.Contract(contractABI,contractAddress);
+    showToast("Wallet connected!", "success");
     enableButtons(true);
-    
-    window.ethereum.on('accountsChanged',(accounts)=>{
-      if(accounts.length===0){account=null; enableButtons(false); document.getElementById("walletAddress").innerText=""; showToast("Wallet disconnected!","error");}
-      else{account=accounts[0]; document.getElementById("walletAddress").innerText=`Connected: ${account}`; showToast("Account changed","info");}
+
+    window.ethereum.on("accountsChanged",(accounts)=>{
+      if(accounts.length===0){
+        account=null; enableButtons(false);
+        document.getElementById("walletAddress").innerText="";
+        showToast("Wallet disconnected!", "error");
+      } else{
+        account = accounts[0];
+        document.getElementById("walletAddress").innerText=`Connected: ${account}`;
+        showToast("Account changed","info");
+      }
     });
+
+    window.ethereum.on("chainChanged",(chainId)=>{
+      showToast("Network changed! Please switch to correct network","error");
+    });
+
   }catch(err){ console.error(err); showToast("Failed to connect wallet","error"); }
 }
+connectBtn.addEventListener("click", connectWallet);
 
-/* ===== Enable / Disable Buttons ===== */
 function enableButtons(enable){
   document.querySelectorAll("button").forEach(btn=>{
     if(!btn.classList.contains("dark-toggle")) btn.disabled=!enable;
@@ -145,13 +170,12 @@ function enableButtons(enable){
 }
 enableButtons(false);
 
-/* ===== File Hashing ===== */
 async function getFileHash(file){
   return new Promise((resolve,reject)=>{
     const reader=new FileReader();
     reader.onload=async ()=>{
       const buffer=reader.result;
-      const hashBuffer=await crypto.subtle.digest('SHA-256',buffer);
+      const hashBuffer = await crypto.subtle.digest("SHA-256",buffer);
       const hashArray=Array.from(new Uint8Array(hashBuffer));
       resolve("0x"+hashArray.map(b=>b.toString(16).padStart(2,"0")).join(''));
     };
@@ -160,58 +184,44 @@ async function getFileHash(file){
   });
 }
 
-/* ===== Contract Functions ===== */
+// Lender Functions
 async function offerLoan(){
   const rate=document.getElementById("interestRate").value;
   const amount=document.getElementById("loanAmount").value;
   const file=document.getElementById("lenderDoc").files[0];
   if(!file) return showToast("Upload a document","error");
   const hash=await getFileHash(file);
-  try{ await contract.methods.offerLoan(rate,hash).send({from:account,value:web3.utils.toWei(amount,'ether')});
+  try{
+    await contract.methods.offerLoan(rate,hash).send({from:account,value:web3.utils.toWei(amount,'ether')});
     showToast("Loan offered successfully","success");
-  }catch(err){console.error(err); showToast("Failed to offer loan","error");}
+  }catch(err){ console.error(err); showToast("Failed to offer loan","error"); }
 }
 
+// Borrower Functions
 async function submitDocument(){
   const file=document.getElementById("borrowerDoc").files[0];
   if(!file) return showToast("Upload document","error");
   const hash=await getFileHash(file);
-  try{ await contract.methods.submitDocument(hash).send({from:account});
-    showToast("Document submitted","success");
-  }catch(err){console.error(err); showToast("Submit failed","error");}
+  try{ await contract.methods.submitDocument(hash).send({from:account}); showToast("Document submitted","success"); }
+  catch(err){ console.error(err); showToast("Submit failed","error"); }
 }
 
 async function takeLoan(){
-  try{ await contract.methods.takeLoan().send({from:account});
-    showToast("Loan taken","success");
-  }catch(err){console.error(err); showToast("Failed to take loan","error");}
+  try{ await contract.methods.takeLoan().send({from:account}); showToast("Loan taken","success"); }
+  catch(err){ console.error(err); showToast("Failed to take loan","error"); }
 }
 
 async function repayLoan(){
   try{
-    const [loanAmount,interestRate,loanStartTime] = await Promise.all([
+    const [loanAmount,interestRate,loanStartTime,lenderAddr]=await Promise.all([
       contract.methods.loanAmount().call(),
       contract.methods.interestRate().call(),
-      contract.methods.loanStartTime().call()
+      contract.methods.loanStartTime().call(),
+      contract.methods.lender().call()
     ]);
+
     const now=Math.floor(Date.now()/1000);
     const elapsed=now-Number(loanStartTime);
     const months=Math.floor(elapsed/(30*24*60*60));
     const interest=(BigInt(loanAmount)*BigInt(interestRate)*(BigInt(months)+1n))/100n;
-    const totalDue=BigInt(loanAmount)+interest;
-    await contract.methods.repayLoan().send({from:account,value:totalDue.toString()});
-    const el=document.getElementById("repayStatus");
-    el.innerText="✅ Repayment successful";
-    el.classList.remove("text-danger");
-    el.classList.add("text-success");
-  }catch(err){ console.error(err); document.getElementById("repayStatus").innerText="❌ Repayment failed"; }
-}
-
-async function resetLoanManually(){
-  try{ await contract.methods.resetLoan().send({from:account}); showToast("Loan reset manually","success");}
-  catch(err){console.error(err); showToast("Reset failed","error");}
-}
-</script>
-
-</body>
-</html>
+    const totalDue=BigInt(loanAmount)+
