--- a/index.html
+++ b/index.html
@@ -1,30 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MetaMask Connect</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Connect MetaMask Example</title>
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body { 
-      font-family: Arial, sans-serif; 
-      padding: 50px;
-      background: #f5f5f5;
-    }
-    #walletAddress {
-      margin-top: 20px;
-      font-weight: bold;
-      color: green;
-    }
-  </style>
 </head>
 <body>
-  <div class="container text-center">
-    <h2>MetaMask Connection Example</h2>
-    <button id="connectBtn" class="btn btn-primary mt-4">Connect MetaMask Wallet</button>
-    <p id="walletAddress">Wallet not connected</p>
-  </div>
+  <h2>MetaMask Connection Test</h2>
+  <button onclick="connectWallet()">Connect Wallet</button>
+  <p id="walletAddress"></p>
+  <p id="status"></p>
 
   <script>
     let web3;
@@ -32,21 +18,22 @@
 
     async function connectWallet() {
       if (window.ethereum) {
+        web3 = new Web3(window.ethereum);
         try {
-          await window.ethereum.request({ method: 'eth_requestAccounts' });
-          web3 = new Web3(window.ethereum);
-          const accounts = await web3.eth.getAccounts();
+          const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
           account = accounts[0];
-          document.getElementById('walletAddress').innerText = `Connected Wallet: ${account}`;
+          document.getElementById('walletAddress').innerText = `Connected: ${account}`;
+          document.getElementById('status').innerText = '✅ Wallet connected successfully!';
         } catch (err) {
-          alert('User denied wallet connection');
+          // User denied or error
+          console.error(err);
+          document.getElementById('status').innerText = '❌ Wallet connection denied. Retrying in 3 seconds...';
+          setTimeout(connectWallet, 3000); // Retry after 3 seconds
         }
       } else {
-        alert('MetaMask not installed. Please install it first.');
+        document.getElementById('status').innerText = '⚠️ MetaMask not detected. Please install MetaMask.';
       }
     }
-
-    document.getElementById('connectBtn').addEventListener('click', connectWallet);
   </script>
 </body>
 </html>
